<resources>
    <string name="app_name">WeBlog</string>
    <string name="app_copy">\@Copyright(C)2016 superfire</string>
    <string name="app_guide">\ E·U·C</string>
    <string name="app_guide_">Exchange·Understand·Communicate</string>
    <string name="app_guide_2">Anytime, anywhere, found a new thing</string>
    <string name="app_guide_3">WeBlog will be rilliant with you！</string>

    <string name="edit_userName">Please enter the UserName</string>
    <string name="edit_pwd">Please enter the password</string>
    <string name="btn_nologin">Having a look</string>
    <string name="edit_npwd">Please enter a new password</string>
    <string name="edit_repwd">Please enter the password again</string>
    <string name="edit_phone">Please enter the phone number</string>
    <string name="edit_rphone">Please enter the reserved phone number</string>
    <string name="edit_vcode">Please lose verification code</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_regetpwd">Done</string>
    <string name="button_getVcode">Get auth code</string>
    <string name="text_forgetPwd">Forgot password</string>
    <string name="text_threeLogin">The third party cooperation</string>
    <string name="text_needpermission">,the necessary permissions.</string>
    <string name="pressTwiceExit">Press again to the exit</string>
    <string name="alldynamic">All dynamic</string>
    <string name="mydynamic">My dynamic</string>
    <string name="frienddynamic">Friends dynamic</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="regetpwd">Reset password</string>
    <string name="saysth">Say something...</string>
    <string name="location">Add location</string>
    <string name="publishdynamic">Publish the dynamic</string>
    <string name="publish">Publish</string>
    <string name="updata">Ready to start</string>
    <string name="addphoto">Add photo</string>
    <string name="fromlocal">From photo album</string>
    <string name="fromcamera">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Confirm</string>
    <string name="switchfolder">Switch the folder</string>
    <string name="failure">We seem to have a few problems</string>
    <string name="netfailure">Network is not smooth</string>
    <string name="nopicture">No picture...</string>
    <string name="progressdiolog_p">In trying to to search...</string>
    <string name="progressdiolog">In trying to load...</string>
    <string name="hint">Hint</string>
    <string name="selectpicture">Select picture</string>
    <string name="selectnum_half">/5</string>
    <string name="selectnum_hint">Choose </string>
    <string name="nosdcard">No SD card</string>
    <string name="ninepicture">Can not choose more</string>
    <string name="nomore">Can\'t add</string>
    <string name="less">Lack the permission which named</string>
    <string name="permission"> </string>
    <string name="gotogrant">Go to grant the permission</string>
    <string name="gotosetting">Setting</string>
    <string name="newversion">Have a new version, quick to upgrade!</string>
    <string name="instanceupdata">Upgrade immediately</string>
    <string name="nexttime">The next time</string>
    <string name="nohint">No longer remind</string>
    <string name="mustupdata">Your current version is too low, upgrade your application can continue to use</string>
    <string name="chooselocation">Choose location point</string>
    <string name="locationfailure">Get location failed</string>
    <string name="downloadpicture">Download the A PICTURE A DAY</string>
    <string name="downsuccess">DownLoad Success</string>
    <string name="downfailure">DownLoad Failure</string>
    <string name="picturefrom">the picture is from http://cn.bing.com</string>
    <string name="getlocation">Is locating</string>
    <string name="nickName">NickNane：</string>
    <string name="tel">Tel：</string>
    <string name="sethead">Set headIcon</string>
    <string name="mydata">My Information</string>
    <string name="errorphone">Worry Phone Num</string>
    <string name="pwdtdiff">Passwords don\'t match</string>
    <string name="errorvcode">Verification code error</string>
    <string name="registersuccess">Register Success</string>
    <string name="registerfailure">Register Failure</string>
    <string name="loginrightnow">Login right now</string>

</resources>
