<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zjf.weike.view.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="4dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_phone"
            style="@style/style_inputText"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone_blue_50_24dp"
                android:hint="@string/edit_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusDown="@+id/edit_vcode"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_getVerifyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/ic_button_bg_theme"
            android:text="@string/button_getVcode"
            android:textColor="@color/cardview_light_background"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_vcode"
            style="@style/style_inputText"
            android:layout_below="@id/textInput_phone"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@id/edit_vcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_verified_user_cyan_50_24dp"
                android:hint="@string/edit_vcode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusDown="@+id/edit_pwd"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_pwd"
            style="@style/style_inputText"
            android:layout_below="@id/textInput_vcode"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@id/edit_pwd"
                style="@style/style_edit_password"
                android:hint="@string/edit_pwd"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/edit_repwd"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_repwd"
            style="@style/style_inputText"
            android:layout_below="@id/textInput_pwd"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edit_repwd"
                style="@style/style_edit_password"
                android:hint="@string/edit_repwd"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_below="@id/textInput_repwd"
            android:text="@string/button_register"
            style="@style/style_button"/>

    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="4dp">

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CoordinatorLayout>
