<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.zjf.weike.view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:padding="4dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_userName"
            style="@style/style_inputText"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edit_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_face_blue_50_24dp"
                android:hint="@string/edit_phone"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@+id/edit_userPwd"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_userPwd"
            style="@style/style_inputText"
            android:layout_below="@id/textInput_userName"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@id/edit_userPwd"
                style="@style/style_edit_password"
                android:hint="@string/edit_pwd"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/style_button"
            android:layout_below="@id/textInput_userPwd"
            android:text="@string/button_login"/>

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginLeft="30dp"
            android:text="@string/button_register"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/text_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_login"
            android:layout_marginRight="30dp"
            android:text="@string/text_forgetPwd"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/linear_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_login_wechat"
                style="@style/image_three_login"
                android:src="@drawable/share_weixin"/>


            <ImageView
                android:id="@+id/img_login_qq"
                style="@style/image_three_login"
                android:src="@drawable/share_qq_bound"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/linear_bottom"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/text_threeLogin"/>
    </RelativeLayout>


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
